fixed wrap bug

--- a/styles.css
+++ b/styles.css
@@ -22,13 +22,16 @@
     margin: 10px;
     height: 200px;
     flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     transition: .3s all ease;
     text-align: center;
     text-decoration: none;
     color: black;
     font-size: 20px;
     font-weight: 600;
-    line-height: 200px;
+
 }
 
 .card:hover {
